# Booker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: release.yml
cli/: CMakeLists.txt
cli/include/: Utilities.hpp
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/booker/: Test.hpp
core/include/booker/archive/: ArchiveUtils.hpp  RarException.hpp  RarReader.hpp  RarWriter.hpp  ZipException.hpp  ZipReader.hpp  ZipWriter.hpp
core/include/booker/format/: CbrHandler.hpp  CbzHandler.hpp  IFormatHandler.hpp
core/include/booker/io/: DirectoryUtils.hpp  TempDirectory.hpp
core/include/booker/utils/: Exception.hpp  ImageUtils.hpp  OS.hpp  StringUtils.hpp
core/src/booker/: Test.cpp
core/src/booker/archive/: RarException.cpp  RarReader.cpp  RarWriter.cpp
core/src/booker/format/: CbrHandler.cpp  CbzHandler.cpp
core/src/booker/utils/: ImageUtils.cpp  StringUtils.cpp
gui/: CMakeLists.txt
gui/include/: Include.hpp
gui/src/: main.cpp
